@@ -70,12 +70,13 @@ class MIMEsearchPage extends QueryPage {
 		$plink = $skin->makeLink( $nt->getPrefixedText(), $text );
 
 		$download = $skin->makeMediaLink( $nt->getText(), 'fuck me!', wfMsgHtml( 'download' ) );
-		$bytes = wfMsg( 'nbytes', $wgLang->formatNum( $result->img_size ) );
+		$bytes = wfMsgExt( 'nbytes', array( 'parsemag', 'escape'),
+			$wgLang->formatNum( $result->img_size ) );
 		$dimensions = wfMsg( 'widthheight', $result->img_width, $result->img_height );
 		$user = $skin->makeLinkObj( Title::makeTitle( NS_USER, $result->img_user_text ), $result->img_user_text );
 		$time = $wgLang->timeanddate( $result->img_timestamp );
 
-		return "($download) $plink .. $dimensions .. $bytes .. $user .. $time";
+		return "($download) $plink . . $dimensions . . $bytes . . $user . . $time";
 	}
 }
 
